hphp/hack/test/typecheck/inout/bad_inout_use_arg14.php
<?hh // strict

function f(inout string $s): void {}

function test(): void {
  $x = Pair { 'herp', 'derp' };
  f(inout $x[1]);
}
